# OMLSP

./: .gitignore  Makefile  README.md  example.sql  perf.py  pyproject.toml  run.sh  test.py
benchmark/: benchmark.py
examples/: basic.sql  broadcast.sql  generated_columns.sql  pagination.sql  scale.sql  secret.sql  select_on_basic.sql  sink.sql  source.sql  websocket_source.sql
examples/sink/: docker-compose.yaml  init-schemas.sh  ticker.json
src/: _types.py  auth.py  channel.py  client.py  engine.py  entrypoint.py  external.py  inout.py  main.py  metadata.py  parser.py  properties.schema.json  requester.py  scheduler.py  services.py  sink.py  test.py  transport.py  utils.py
src/_types/: properties.py
src/app/: __init__.py  app.py  types.py
src/auth/: secret_handler.py  signer.py  types.py
src/batch/: batch_manager.py
src/catalog/: catalog.py  errors.py  secret_catalog.py  sink_catalog.py  source_catalog.py  table_catalog.py  view_catalog.py
src/channel/: broker.py  channel.py  channel_broker.py  consumer.py  producer.py  promise.py  registry.py  types.py
src/client/: __init__.py  client_manager.py
src/commons/: scheduler.py  utils.py
src/context/: __init__.py  context.py  context_manager.py
src/dag/: dag_manager.py
src/engine/: __init__.py  engine.py
src/entity/: entity_manager.py
src/eventbus/: eventbus.py
src/graph/: dependency_graph.py
src/metadata/: __init__.py  db.py  metadata.py
src/runner/: __init__.py  runner.py
src/scheduler/: scheduler.py  types.py
tests/: conftest.py  test_parser.py  test_requester.py
(+48 files in other folders)
