[project]
name = "omlsp"
version = "0.0.1"
description = "One More Little SQL Parser"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aiohttp==3.12.14",
  "apscheduler>=3.11.0",
  "duckdb>=1.3.2",
  "jsonpath-ng>=1.7.0",
  "loguru==0.7.3",
  "polars>=1.31.0",
  "pyarrow>=21.0.0",
  "sqlglot==27.1.0",
]

[dependency-groups]
dev = [
  "ruff>=0.12.3",
    "pytest==8.4.1",
    "pytest-asyncio==1.1.0",
    "vcrpy==6.0.2",

]
