[project]
name = "omlsp"
version = "0.0.1"
description = "One More Little SQL Parser"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aiohttp==3.12.14",
  "apscheduler>=3.11.0",
  "duckdb>=1.3.2",
  "jq>=1.10.0",
  "jsonschema>=4.25.0",
  "loguru==0.7.3",
  "numpy>=2.3.2",
  "pandas>=2.3.1",
  "polars>=1.31.0",
  "pyarrow>=21.0.0",
  "sqlglot==27.1.0",
  "prompt-toolkit>=3.0",
  "httpx>=0.28.1",
]

[dependency-groups]
dev = [
  "ruff>=0.12.3",
    "pytest==8.4.1",
    "pytest-asyncio==1.1.0",
    "vcrpy==6.0.2",

]
